--- a/RedditorMatch.ipynb
+++ b/RedditorMatch.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 174,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -15,12 +13,14 @@
     "import time\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.metrics.pairwise import linear_kernel\n",
-    "import praw"
+    "import praw\n",
+    "\n",
+    "import credentials as creds"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 175,
    "metadata": {
     "collapsed": true
    },
@@ -32,12 +32,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 176,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "CLIENT_ID = 'INSERT_YOURS'\n",
-    "CLIENT_SECRET_KEY = 'INSERT_YOURS'\n",
+    "CLIENT_ID = creds.client_id()\n",
+    "CLIENT_SECRET_KEY = creds.client_secret_key()\n",
     "\n",
     "\n",
     "r = praw.Reddit(client_id = CLIENT_ID,\n",
@@ -49,20 +57,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "scrolled": false
-   },
-   "outputs": [],
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"Rand\n",
+      "None\n",
+      "r/trailerparkboys\n",
+      "92\n",
+      "92\n",
+      "0\n",
+      "0\n",
+      "1411334176.0\n",
+      "0\n",
+      "False\n",
+      "https://www.reddit.com/r/trailerparkboys/comments/2h28wb/your_favourite_jroc_one_liners/\n",
+      "================================\n",
+      "I hat\n",
+      "None\n",
+      "r/google\n",
+      "56\n",
+      "56\n",
+      "0\n",
+      "0\n",
+      "1405442311.0\n",
+      "0\n",
+      "False\n",
+      "https://www.reddit.com/r/google/comments/2arpge/its_a_beautiful_day_in_the_fiberhood/\n",
+      "================================\n",
+      "I for\n",
+      "None\n",
+      "r/mizzou\n",
+      "43\n",
+      "43\n",
+      "0\n",
+      "0\n",
+      "1447272500.0\n",
+      "0\n",
+      "False\n",
+      "https://www.reddit.com/r/mizzou/comments/3sg2ib/is_the_entire_mizzou_protest_based_on_lies/\n",
+      "================================\n"
+     ]
+    }
+   ],
    "source": [
-    "def getThreads(subreddit, limit = 50):\n",
-    "    thread_ids = []\n",
-    "    \n",
-    "    for t in subreddit.hot(limit = limit):\n",
-    "        thread_ids.append(t.id)\n",
-    "    \n",
-    "    return(thread_ids)"
+    "user = r.redditor(\"BottomsMU\")\n",
+    "\n",
+    "comments = user.comments.top(limit = 3)\n",
+    "for i in comments:\n",
+    "    print(i.body[0:5])\n",
+    "    print(i.author_flair_text)\n",
+    "    print(i.subreddit_name_prefixed)\n",
+    "    print(i.score)\n",
+    "    print(i.ups)\n",
+    "    print(i.downs)\n",
+    "    print(i.controversiality)\n",
+    "    print(i.created_utc)\n",
+    "    print(i.gilded)\n",
+    "    print(i.over_18)\n",
+    "    print(i.link_permalink)\n",
+    "    print(\"================================\")"
    ]
   },
   {
@@ -72,21 +129,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "def getUsersFromSubreddit(subredditIds):\n",
-    "    if(len(subredditIds) < 1):\n",
-    "        return None\n",
-    "    \n",
-    "    usernames = []\n",
-    "\n",
-    "    for thread_id in subredditIds:\n",
-    "        time.sleep(2)\n",
-    "        thread = r.submission(id = thread_id)\n",
-    "        username = thread.author.name\n",
-    "        if (username not in usernames):\n",
-    "            usernames.append(username)\n",
-    "    return(usernames)      "
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -95,19 +138,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "def cleanText(text):\n",
-    "    text = text.replace(',', ' ').replace(':', ' ')\\\n",
-    "                .replace('...', ' ')\\\n",
-    "                .replace('?', ' ')\\\n",
-    "                .replace('!', ' ')\\\n",
-    "                .replace(';', ' ')\\\n",
-    "                .replace('\\n', ' ').replace('\\r', '') # replace newlines and page breaks     \n",
-    "                \n",
-    "    text = re.sub(r'([^\\s\\w]|_)+', '', text) # remove non-alphanumeric characters but leave the spaces\n",
-    "    text = re.sub(' +',' ', text) # remove double spaces        \n",
-    "    return(text)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -116,35 +147,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "def getUserComments(username, commentsLimit = 50):   \n",
-    "    userComments = []\n",
-    "    user = r.redditor(username)\n",
-    "\n",
-    "    # new comments\n",
-    "    for c in user.comments.new(limit = commentsLimit):\n",
-    "        time.sleep(2)\n",
-    "        comment = cleanText(c.body)        \n",
-    "        if (comment not in userComments):\n",
-    "            userComments.append(comment)\n",
-    "        \n",
-    "    \n",
-    "    # hot comments\n",
-    "    for c in user.comments.hot(limit = commentsLimit):  \n",
-    "        time.sleep(2)\n",
-    "        comment = cleanText(c.body)        \n",
-    "        if (comment not in userComments):\n",
-    "            userComments.append(comment)\n",
-    "\n",
-    "    # hot comments\n",
-    "    for c in user.comments.controversial(limit = commentsLimit):\n",
-    "        time.sleep(2)\n",
-    "        comment = cleanText(c.body)     \n",
-    "        if (comment not in userComments):\n",
-    "            userComments.append(comment)\n",
-    "        \n",
-    "    return(userComments)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -153,30 +156,65 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "def scrapeCommentsFromSubreddit(subreddit):\n",
-    "    \n",
-    "    UserArray = []\n",
-    "    CommentArray = []  \n",
-    "    \n",
-    "    sub = r.subreddit(subreddit)\n",
-    "    threads = getThreads(sub)\n",
-    "    users = getUsersFromSubreddit(threads)\n",
-    "    for user in users:        \n",
-    "        userComments = getUserComments(user)\n",
-    "        userComments = \".\".join(userComments)\n",
-    "        UserArray.append(user)\n",
-    "        CommentArray.append(userComments)      \n",
-    "        \n",
-    "    df = pd.DataFrame(UserArray, columns = [\"Username\"])\n",
-    "    df[\"Comments\"] = CommentArray\n",
-    "\n",
-    "    return(df)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -190,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -226,17 +264,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-11-5c17ef1f9197>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mmatches\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfindMatches\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0myour_username\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"ohai123456789\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msubreddit\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"datascience\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-10-5f86ad87b31c>\u001b[0m in \u001b[0;36mfindMatches\u001b[1;34m(your_username, subreddit)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mfindMatches\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0myour_username\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msubreddit\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[0mcorpus\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m     \u001b[0mcorpusDf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mscrapeCommentsFromSubreddit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msubreddit\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m     \u001b[0mcorpusDf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Comments\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;32mlambda\u001b[0m \u001b[0mrow\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mcorpus\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-8-23852ee20126>\u001b[0m in \u001b[0;36mscrapeCommentsFromSubreddit\u001b[1;34m(subreddit)\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[0musers\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgetUsersFromSubreddit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mthreads\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0muser\u001b[0m \u001b[1;32min\u001b[0m \u001b[0musers\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m         \u001b[0muserComments\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgetUserComments\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0muser\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m         \u001b[0muserComments\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\".\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0muserComments\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m         \u001b[0mUserArray\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0muser\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-7-dbe3e2e932cf>\u001b[0m in \u001b[0;36mgetUserComments\u001b[1;34m(username, commentsLimit)\u001b[0m\n\u001b[0;32m     13\u001b[0m     \u001b[1;31m# hot comments\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mc\u001b[0m \u001b[1;32min\u001b[0m \u001b[0muser\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcomments\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlimit\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcommentsLimit\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 15\u001b[1;33m         \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     16\u001b[0m         \u001b[0mcomment\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcleanText\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbody\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mcomment\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0muserComments\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
-    "matches = findMatches(your_username = \"INSERT_YOUR_USERNAMES\", subreddit = \"datascience\")"
+    "matches = findMatches(your_username = \"ohai123456789\", subreddit = \"datascience\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "len(matches)"
