--- a/ScrapeComments.ipynb
+++ b/ScrapeComments.ipynb
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -421,7 +421,84 @@
       "------ Retrieved 157 comments for: RedInsulatedPatriot\n",
       "------ Retrieved 1030 comments for: sahtopi\n",
       "------ Retrieved 1043 comments for: rickjuly252012\n",
-      "------ Retrieved 1059 comments for: BottomsMU\n"
+      "------ Retrieved 1059 comments for: BottomsMU\n",
+      "------ Retrieved 0 comments for: None\n",
+      "------ Retrieved 1817 comments for: BenisonBT101\n",
+      "------ Retrieved 291 comments for: EasPerFunSkAt\n",
+      "------ Retrieved 1780 comments for: UpboatOrNoBoat\n",
+      "------ Retrieved 1849 comments for: danwin\n",
+      "------ Retrieved 1473 comments for: RobinIsAGoodfellow\n",
+      "------ Retrieved 1768 comments for: RichardTBarber\n",
+      "------ Retrieved 1439 comments for: Apatches\n",
+      "------ Retrieved 1872 comments for: senorworldwide\n",
+      "------ Retrieved 1687 comments for: v1ct0r1us\n",
+      "------ Retrieved 46 comments for: Fredfries333\n",
+      "------ Retrieved 1722 comments for: herple_derpskin\n",
+      "------ Retrieved 752 comments for: notfarenough\n",
+      "------ Retrieved 1908 comments for: Ben--Affleck\n",
+      "------ Retrieved 1896 comments for: ReasonOz\n",
+      "------ Retrieved 89 comments for: Squidler31\n",
+      "------ Retrieved 1951 comments for: TheSliceman\n",
+      "------ Retrieved 809 comments for: billy492\n",
+      "------ Retrieved 183 comments for: tigris1427\n",
+      "------ Retrieved 1767 comments for: Jackaboonie\n",
+      "------ Retrieved 1625 comments for: razeal113\n",
+      "------ Retrieved 1894 comments for: bat_mayn\n",
+      "------ Retrieved 1088 comments for: Feartality\n",
+      "------ Retrieved 27 comments for: CoMoBroLetsGo\n",
+      "------ Retrieved 20 comments for: mimipath123456\n",
+      "------ Retrieved 674 comments for: sparkyumr98\n",
+      "------ Retrieved 1928 comments for: xAIRGUITARISTx\n",
+      "------ Retrieved 1336 comments for: texsurfin\n",
+      "------ Retrieved 393 comments for: Whynothaveanother123\n",
+      "------ Retrieved 1900 comments for: Jayrate\n",
+      "------ Retrieved 1854 comments for: EaseDel\n",
+      "------ Retrieved 1663 comments for: Mori23\n",
+      "------ Retrieved 1787 comments for: r0sco\n",
+      "------ Retrieved 1897 comments for: topdeck55\n",
+      "------ Retrieved 110 comments for: the_trout_\n",
+      "Failed...moving on...\n",
+      "Failed...moving on...\n",
+      "Failed...moving on...\n",
+      "------ Retrieved 0 comments for: blackisis6\n",
+      "Failed...moving on...\n",
+      "Failed...moving on...\n",
+      "Failed...moving on...\n",
+      "------ Retrieved 0 comments for: redditors_are_racist\n",
+      "------ Retrieved 1958 comments for: BrettGilpin\n",
+      "------ Retrieved 1957 comments for: Ih8Hondas\n",
+      "------ Retrieved 1931 comments for: PrancingPeach\n",
+      "------ Retrieved 1840 comments for: Youareabadperson6\n",
+      "------ Retrieved 1809 comments for: TruthFromAnAsshole\n",
+      "------ Retrieved 1791 comments for: pisspoordecisions\n",
+      "------ Retrieved 1023 comments for: nathan_295\n",
+      "------ Retrieved 1598 comments for: BransonBombshell\n",
+      "------ Retrieved 827 comments for: DonaldJTrump2k16\n",
+      "------ Retrieved 546 comments for: MechEGuy\n",
+      "------ Retrieved 517 comments for: Mill_Otalius\n",
+      "------ Retrieved 1941 comments for: SaigaFan\n",
+      "------ Retrieved 1 comments for: throwaysxz\n",
+      "------ Retrieved 1023 comments for: kweazy\n",
+      "------ Retrieved 1961 comments for: SonicFrost\n",
+      "------ Retrieved 983 comments for: KCTigerGrad\n",
+      "------ Retrieved 1718 comments for: Birdsonbat\n",
+      "------ Retrieved 941 comments for: gibbey\n",
+      "------ Retrieved 1812 comments for: genkaiX1\n",
+      "------ Retrieved 1617 comments for: voatthrowaway0\n",
+      "------ Retrieved 356 comments for: photoswitchesaregay\n",
+      "------ Retrieved 1049 comments for: AutoModerator\n",
+      "------ Retrieved 627 comments for: mexistential_gyro\n",
+      "------ Retrieved 1611 comments for: SovreignTripod\n",
+      "------ Retrieved 36 comments for: disappointingpenis\n",
+      "------ Retrieved 171 comments for: cybercrimes_1999\n",
+      "------ Retrieved 60 comments for: zachnfty\n",
+      "------ Retrieved 1168 comments for: LucidDreamer18\n",
+      "------ Retrieved 44 comments for: BmoreZou\n",
+      "------ Retrieved 537 comments for: SovietMD\n",
+      "------ Retrieved 734 comments for: mpfairchild\n",
+      "------ Retrieved 1036 comments for: J_Tuck\n",
+      "------ Retrieved 698 comments for: wesknowsbest\n",
+      "Outputting dataframe with  76 records\n"
      ]
     }
    ],
@@ -435,7 +512,196 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Retrieved  3 threads...\n",
+      "--- Adding user: dragpent\n",
+      "--- Adding user: yes_no_yes_yes_yes\n",
+      "--- Adding user: LoveMockdown\n",
+      "--- Adding user: vishnureddy17\n",
+      "--- Adding user: Asdamaje\n",
+      "--- Adding user: Asianhead\n",
+      "--- Adding user: gafavid\n",
+      "--- Adding user: Bryggyth\n",
+      "--- Adding user: AChillWolverine\n",
+      "--- Adding user: Antwohlf\n",
+      "--- Adding user: joefigs\n",
+      "--- Adding user: smelborp_for_preside\n",
+      "--- Adding user: Brandon1027\n",
+      "--- Adding user: KitchenEnd\n",
+      "--- Adding user: zelTram\n",
+      "--- Adding user: CrosscutJester8\n",
+      "--- Adding user: None\n",
+      "--- Adding user: OhOkayThanks\n",
+      "--- Adding user: Madigan37\n",
+      "--- Adding user: GawdGo\n",
+      "--- Adding user: evodie\n",
+      "--- Adding user: LoHershal\n",
+      "--- Adding user: stemich\n",
+      "--- Adding user: throwawayinthefire\n",
+      "--- Adding user: newunivmich\n",
+      "--- Adding user: michigan2020\n",
+      "--- Adding user: trillic\n",
+      "--- Adding user: okl_617\n",
+      "--- Adding user: soraaxle\n",
+      "--- Adding user: Ripped_Atheist\n",
+      "--- Adding user: DarthUnnamed\n",
+      "--- Adding user: ultimamax\n",
+      "--- Adding user: omylime\n",
+      "--- Adding user: im2slick4u\n",
+      "--- Adding user: queenchemistry\n",
+      "--- Adding user: aidenpop2\n",
+      "--- Adding user: fleets300\n",
+      "--- Adding user: throwme7\n",
+      "--- Adding user: jest034\n",
+      "--- Adding user: LostDamnation\n",
+      "--- Adding user: JeSuisLuis\n",
+      "--- Adding user: stuffgo1207\n",
+      "--- Adding user: CorporateHobbyist\n",
+      "--- Adding user: kourtorder\n",
+      "--- Adding user: Camilte\n",
+      "--- Adding user: Dawnseeker11\n",
+      "--- Adding user: Freakin-Amazing\n",
+      "--- Adding user: flamses1000\n",
+      "--- Adding user: throwaway_umug\n",
+      "--- Adding user: Chronoterminus\n",
+      "--- Adding user: nazusdog\n",
+      "--- Adding user: baghalipolo\n",
+      "--- Adding user: ExpGrant\n",
+      "--- Adding user: a2sweep\n",
+      "--- Adding user: jschafs\n",
+      "--- Adding user: fileop\n",
+      "--- Adding user: datboiforever\n",
+      "--- Adding user: KevinHUANGGG\n",
+      "--- Adding user: ferrariman96\n",
+      "--- Adding user: Gangster2127\n",
+      "--- Adding user: zhekingz\n",
+      "--- Adding user: awerv\n",
+      "--- Adding user: rolo5987\n",
+      "--- Adding user: Starterjoker\n",
+      "--- Adding user: ensigmapi\n",
+      "--- Adding user: ghaboy\n",
+      "--- Adding user: chrislun16\n",
+      "--- Adding user: sunnysushi\n",
+      "--- Adding user: peterhumm18\n",
+      "--- Adding user: ache_17\n",
+      "--- Adding user: da-n-ka-n\n",
+      "--- Adding user: CaptainCougar\n",
+      "--- Adding user: Ken_Spiffy_Jr\n",
+      "--- Adding user: DarkLordKetchup\n",
+      "--- Adding user: Wal-Martinez\n",
+      "--- Adding user: skunkel123\n",
+      "--- Adding user: BooJoo42\n",
+      "--- Adding user: -losingmymind-\n",
+      "--- Adding user: stormstriker452\n",
+      "--- Adding user: theez35\n",
+      "--- Adding user: wmb0117\n",
+      "--- Adding user: JimJohn2020\n",
+      "--- Adding user: amvann\n",
+      "--- Adding user: MilesStraume\n",
+      "--- Adding user: XtraDurzzle\n",
+      "--- Adding user: Denardsdreads21\n",
+      "--- Adding user: oskymosky\n",
+      "--- Adding user: joluby\n",
+      "--- Adding user: PrinceInRustyArmor\n",
+      "--- Adding user: nitasu987\n",
+      "--- Adding user: TimelyNefariousness\n",
+      "--- Adding user: ClassChoices\n",
+      "--- Adding user: stopcurtains\n",
+      "--- Adding user: IntakeExhaust\n",
+      "--- Adding user: erikjs99\n",
+      "--- Adding user: imjusthere2shitpost\n",
+      "--- Adding user: Astronautswag\n",
+      "--- Adding user: Thecallofrhino\n",
+      "--- Adding user: anuraagp\n",
+      "--- Adding user: LFCPWG\n",
+      "--- Adding user: aaa16797\n",
+      "--- Adding user: take_the_norm\n",
+      "--- Adding user: Cool_Story_Bra\n",
+      "--- Adding user: Dillydill123\n",
+      "--- Adding user: guy558\n",
+      "--- Adding user: SharKCS11\n",
+      "--- Adding user: ChewwiesvilleSlugger\n",
+      "--- Adding user: Umichthrowaway1\n",
+      "--- Adding user: PPP_Your_Boat\n",
+      "--- Adding user: adoreisende\n",
+      "--- Adding user: colinmhayes2\n",
+      "--- Adding user: SpaceYooper\n",
+      "--- Adding user: santoast_\n",
+      "--- Adding user: a_op\n",
+      "--- Adding user: inkqi\n",
+      "--- Adding user: jon-sn0w\n",
+      "--- Adding user: tbh11\n",
+      "--- Adding user: zaser77\n",
+      "--- Adding user: juandaddy\n",
+      "--- Adding user: thedc96\n",
+      "--- Adding user: msattam\n",
+      "--- Adding user: orked_\n",
+      "--- Adding user: rosemary515\n",
+      "--- Adding user: heedlessly3\n",
+      "--- Adding user: fracta1\n",
+      "--- Adding user: one_soup_snake\n",
+      "--- Adding user: Selbeven\n",
+      "--- Adding user: MWolverine63\n",
+      "--- Adding user: Dropping_Dimes\n",
+      "--- Adding user: sensenomake\n",
+      "--- Adding user: lazyfirefly\n",
+      "--- Adding user: Claassy\n",
+      "--- Adding user: PhazerTeam\n",
+      "--- Adding user: mojo46849\n",
+      "--- Adding user: Danyol\n",
+      "--- Adding user: akamoltres\n",
+      "--- Adding user: YourNameHeer\n",
+      "--- Adding user: sacredmichigander\n",
+      "--- Adding user: Mycousinislin\n",
+      "--- Adding user: UnaffiliatedOpinion\n",
+      "--- Adding user: Detrinex\n",
+      "--- Adding user: Nareshiyengar\n",
+      "--- Adding user: LaSopaSabrosa\n",
+      "--- Adding user: NoImGuy\n",
+      "--- Adding user: LimBomber\n",
+      "--- Adding user: Infinidecimal\n",
+      "--- Adding user: druefro\n",
+      "--- Adding user: nafis144\n",
+      "--- Adding user: For_Gihad\n",
+      "--- Adding user: colinmeredithhayes\n",
+      "--- Adding user: PimpMasterJoe\n",
+      "--- Adding user: AverageFisher\n",
+      "--- Adding user: WhySoSeriousHuhuhuhu\n",
+      "--- Adding user: El_Pescado18\n",
+      "--- Adding user: DarkOne14\n",
+      "--- Adding user: Staple_Overlord\n",
+      "--- Adding user: MrSplendiferous\n",
+      "--- Adding user: Sarcasm_and_stuff\n",
+      "--- Adding user: ElectricCharlie\n",
+      "--- Adding user: Juicysteak117\n",
+      "--- Adding user: Imjusthereformemes\n",
+      "--- Adding user: Black-Spot\n",
+      "--- Adding user: poojlikepooja\n",
+      "--- Adding user: Ayaksnolkop_Ailatan\n",
+      "--- Adding user: B00KENDS\n",
+      "--- Adding user: mcsher\n",
+      "--- Adding user: SSJRoshi\n",
+      "--- Adding user: themadscientistwho\n",
+      "--- Adding user: mad_narwhal\n",
+      "--- Adding user: skepticalDragon\n",
+      "--- Adding user: TepidPen\n",
+      "--- Adding user: ThePr1d3\n",
+      "Retrieved  172 users...\n",
+      "------ Retrieved 1142 comments for: dragpent\n",
+      "------ Retrieved 1729 comments for: yes_no_yes_yes_yes\n",
+      "------ Retrieved 650 comments for: LoveMockdown\n",
+      "------ Retrieved 157 comments for: vishnureddy17\n",
+      "------ Retrieved 24 comments for: Asdamaje\n",
+      "------ Retrieved 1216 comments for: Asianhead\n",
+      "------ Retrieved 95 comments for: gafavid\n",
+      "------ Retrieved 1101 comments for: Bryggyth\n"
+     ]
+    }
+   ],
    "source": [
     "umich = scrapeCommentsFromSubreddit(\"uofm\")\n",
     "\n",
