--- a/ScrapeComments.ipynb
+++ b/ScrapeComments.ipynb
@@ -5483,7 +5483,161 @@
       "------ Retrieved 1088 comments for: benjaminchodroff\n",
       "------ Retrieved 1961 comments for: DabuSurvivor\n",
       "------ Retrieved 424 comments for: zha4fh\n",
-      "------ Retrieved 653 comments for: DMShaw\n"
+      "------ Retrieved 653 comments for: DMShaw\n",
+      "------ Retrieved 1777 comments for: dashmesh\n",
+      "------ Retrieved 69 comments for: forthatfeeling\n",
+      "------ Retrieved 1180 comments for: JesusIsOG\n",
+      "------ Retrieved 1900 comments for: JitGoinHam\n",
+      "------ Retrieved 1881 comments for: Barking_at_the_Moon\n",
+      "------ Retrieved 84 comments for: Managingmyself\n",
+      "------ Retrieved 1698 comments for: Miles_Prowess\n",
+      "------ Retrieved 1875 comments for: MrDowntown\n",
+      "------ Retrieved 1120 comments for: SantosMcGarry2016\n",
+      "------ Retrieved 550 comments for: GalacticSpacePolice\n",
+      "------ Retrieved 713 comments for: threedayweekend\n",
+      "------ Retrieved 286 comments for: sersdf\n",
+      "------ Retrieved 662 comments for: Etch_A_Sketcher\n",
+      "------ Retrieved 1964 comments for: analogkid01\n",
+      "------ Retrieved 1923 comments for: darksiderising\n",
+      "------ Retrieved 1225 comments for: North_Avenue\n",
+      "------ Retrieved 604 comments for: PterodactylButter\n",
+      "------ Retrieved 1816 comments for: Effimero89\n",
+      "------ Retrieved 1106 comments for: TurtleSayuri\n",
+      "------ Retrieved 1603 comments for: pablitorun\n",
+      "------ Retrieved 1460 comments for: BBQLays\n",
+      "------ Retrieved 158 comments for: jonfish\n",
+      "------ Retrieved 1988 comments for: youtubefactsbot\n",
+      "------ Retrieved 1572 comments for: atleastzero\n",
+      "------ Retrieved 1839 comments for: dak0tah\n",
+      "------ Retrieved 1547 comments for: mrmoe198\n",
+      "------ Retrieved 1858 comments for: WTF_SilverChair\n",
+      "------ Retrieved 1873 comments for: Margatron\n",
+      "------ Retrieved 808 comments for: rw20\n",
+      "------ Retrieved 1894 comments for: sandm000\n",
+      "------ Retrieved 1877 comments for: Palivizumab\n",
+      "------ Retrieved 1318 comments for: Diagonet\n",
+      "------ Retrieved 934 comments for: GreenHorseFumble\n",
+      "------ Retrieved 1082 comments for: imtotallyhighritemow\n",
+      "------ Retrieved 1202 comments for: ilrosewood\n",
+      "------ Retrieved 1931 comments for: skepticaljesus\n",
+      "------ Retrieved 199 comments for: jareh\n",
+      "------ Retrieved 1881 comments for: nitiger\n",
+      "------ Retrieved 1738 comments for: CoolingtonBeans\n",
+      "------ Retrieved 1787 comments for: amichael15\n",
+      "------ Retrieved 390 comments for: Gastronautmike\n",
+      "------ Retrieved 782 comments for: AgainAndABen\n",
+      "------ Retrieved 1924 comments for: DMKarwoski\n",
+      "------ Retrieved 1932 comments for: seeasea\n",
+      "------ Retrieved 753 comments for: CharlesRat\n",
+      "------ Retrieved 841 comments for: mebejamminmon\n",
+      "------ Retrieved 1871 comments for: jojofine\n",
+      "------ Retrieved 1830 comments for: mickcube\n",
+      "------ Retrieved 452 comments for: chitownartmom\n",
+      "------ Retrieved 1951 comments for: bingaman\n",
+      "------ Retrieved 388 comments for: alrightimgay\n",
+      "------ Retrieved 827 comments for: superj1\n",
+      "------ Retrieved 1682 comments for: tommy1005\n",
+      "------ Retrieved 1957 comments for: siamthailand\n",
+      "------ Retrieved 1639 comments for: Hyperx1313\n",
+      "------ Retrieved 1909 comments for: monstimal\n",
+      "------ Retrieved 1148 comments for: ReadwhatIsaid\n",
+      "------ Retrieved 1885 comments for: desterion\n",
+      "------ Retrieved 827 comments for: KilotaketheWheel\n",
+      "------ Retrieved 1354 comments for: Terracot\n",
+      "------ Retrieved 1809 comments for: Gaslov\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------ Retrieved 1929 comments for: DAEFlair\n",
+      "------ Retrieved 1494 comments for: duckNabush\n",
+      "------ Retrieved 1933 comments for: IHv2RtrnSumVdeotapes\n",
+      "------ Retrieved 1170 comments for: rivalOne\n",
+      "------ Retrieved 1958 comments for: Tebasaki\n",
+      "------ Retrieved 1144 comments for: lItsAutomaticl\n",
+      "------ Retrieved 1723 comments for: blaze413\n",
+      "------ Retrieved 971 comments for: The_Squibz\n",
+      "Failed...moving on...\n",
+      "------ Retrieved 1026 comments for: BadIdeaSociety\n",
+      "------ Retrieved 1852 comments for: HazeGrey\n",
+      "------ Retrieved 1757 comments for: kingdowngoat\n",
+      "------ Retrieved 678 comments for: BoogerBagels\n",
+      "------ Retrieved 1340 comments for: Chicagopeakoil\n",
+      "------ Retrieved 909 comments for: irrelevant_canadian\n",
+      "------ Retrieved 1803 comments for: drof69\n",
+      "------ Retrieved 1258 comments for: nickwork\n",
+      "------ Retrieved 1564 comments for: PompousWombat\n",
+      "------ Retrieved 1718 comments for: the_traveler\n",
+      "------ Retrieved 1973 comments for: Dejahthoris22\n",
+      "------ Retrieved 1860 comments for: ToolFO\n",
+      "------ Retrieved 1947 comments for: thirdfounder\n",
+      "------ Retrieved 573 comments for: TheDigitalRhino\n",
+      "------ Retrieved 1868 comments for: Ferinex\n",
+      "------ Retrieved 1891 comments for: DriftingJesus\n",
+      "------ Retrieved 1074 comments for: silvertonesx24\n",
+      "------ Retrieved 1854 comments for: woohoo\n",
+      "------ Retrieved 1963 comments for: aqouta\n",
+      "------ Retrieved 601 comments for: cezarcabrales\n",
+      "------ Retrieved 1802 comments for: EldarCorsair\n",
+      "------ Retrieved 1962 comments for: Sysiphuslove\n",
+      "------ Retrieved 1333 comments for: hahah_u_suck\n",
+      "------ Retrieved 1912 comments for: ImagineAllTheKarma\n",
+      "------ Retrieved 1560 comments for: Dalaim0mma\n",
+      "------ Retrieved 1237 comments for: PleaseGiveGold\n",
+      "------ Retrieved 1060 comments for: FunnOnABunn\n",
+      "------ Retrieved 637 comments for: TheMajesticDoge\n",
+      "------ Retrieved 1974 comments for: cardinals1996\n",
+      "------ Retrieved 764 comments for: cheesemop\n",
+      "------ Retrieved 1931 comments for: Jurph\n",
+      "------ Retrieved 1705 comments for: Austyx\n",
+      "------ Retrieved 1931 comments for: NBegovich\n",
+      "------ Retrieved 1888 comments for: abowlofcereal\n",
+      "------ Retrieved 1606 comments for: Gaming_Loser\n",
+      "------ Retrieved 988 comments for: windsweptlooks\n",
+      "------ Retrieved 1195 comments for: FiremanHandles\n",
+      "------ Retrieved 1453 comments for: Scolias\n",
+      "------ Retrieved 883 comments for: Th3DoCtA\n",
+      "------ Retrieved 927 comments for: slyfoxorigama\n",
+      "------ Retrieved 1894 comments for: Marenum\n",
+      "------ Retrieved 1930 comments for: EncasedMeats\n",
+      "------ Retrieved 1870 comments for: tedwick\n",
+      "------ Retrieved 1330 comments for: madisonfootball99\n",
+      "------ Retrieved 1658 comments for: neon\n",
+      "------ Retrieved 1783 comments for: ttogreh\n",
+      "------ Retrieved 1550 comments for: 2totwo\n",
+      "------ Retrieved 1884 comments for: gtautumn\n",
+      "------ Retrieved 1882 comments for: MsAlign\n",
+      "------ Retrieved 1969 comments for: powercorruption\n",
+      "------ Retrieved 1917 comments for: ZeiglerJaguar\n",
+      "------ Retrieved 1871 comments for: mkizys\n",
+      "------ Retrieved 1102 comments for: GiuseppeZangara\n",
+      "------ Retrieved 1970 comments for: Fap_Left_Surf_Right\n",
+      "------ Retrieved 1788 comments for: KNueve83\n",
+      "------ Retrieved 1857 comments for: FlyLikeRabbi\n",
+      "------ Retrieved 245 comments for: Captain_Sp00k\n",
+      "------ Retrieved 1774 comments for: Work_High_not_Hard\n",
+      "------ Retrieved 1766 comments for: coachjimmy\n",
+      "------ Retrieved 1681 comments for: Furbush\n",
+      "------ Retrieved 1667 comments for: AShinyTorchic\n",
+      "------ Retrieved 1818 comments for: andrejevas\n",
+      "------ Retrieved 1030 comments for: ClemWillRememberThat\n",
+      "------ Retrieved 1720 comments for: Mashedtaders\n",
+      "------ Retrieved 1933 comments for: Slideways\n",
+      "------ Retrieved 1508 comments for: ihave2kittens\n",
+      "------ Retrieved 1337 comments for: MadScienceIntern\n",
+      "------ Retrieved 1972 comments for: SinkHoleDeMayo\n",
+      "------ Retrieved 494 comments for: MrLessMore\n",
+      "------ Retrieved 1864 comments for: JohnQAnon\n",
+      "------ Retrieved 1810 comments for: cnot3\n",
+      "------ Retrieved 1674 comments for: gnujack\n",
+      "------ Retrieved 1324 comments for: whywait\n",
+      "------ Retrieved 1300 comments for: ReplaceSelect\n",
+      "------ Retrieved 1399 comments for: dragonblaz9\n",
+      "------ Retrieved 1940 comments for: Sharkictus\n",
+      "------ Retrieved 427 comments for: Jayzswhiteguilt\n",
+      "------ Retrieved 323 comments for: BongDaddy69\n"
      ]
     }
    ],
